test/configCases/errors/import-missing-amd/webpack.config.js
module.exports = [
	{
		externals: {
			external: { amd: "external-amd" }
		}
	},
	{
		externals: {
			external: "amd external-amd"
		}
	}
];
